# videosrn_new

./: .env.docker.example  .env.example  .gitignore  Dockerfile.backend  Dockerfile.backend.dockerignore  Dockerfile.frontend  Dockerfile.frontend.dockerignore  MOBILE_MIGRATION_PROGRESS.md  docker-compose.yml  package-lock.json  package.json  push-to-prod.sh
app/: globals.css  (+2 more)
backend/: .env.example  .gitignore  pyproject.toml
backend/.github/workflows/: ci.yml  deploy-ec2.yml
backend/alembic/: env.py
backend/alembic/versions/: 20250324_0001_initial_jobs.py  20250326_0002_job_owner_sub.py  20260406_0003_media_items.py  20260409_0004_users_credits.py  (+5 more)
backend/app/: auth_deps.py  auth_google.py  config.py  credit_deps.py  credit_holds.py  credit_reasons.py  credit_service.py  db.py  job_store.py  main.py  media_store.py  models.py  output_profile.py  schemas.py
backend/deploy/: journald-retention.conf
backend/docs/: ADMIN_CONSOLE_CONTEXT.md  AWS_PREREQS.md  DEPLOY_EC2.md  DEPLOY_WORKFLOW.md  EC2_FULL_SETUP.md  GOOGLE_OAUTH.md  SSH_DEPLOY_FROM_YOUR_MAC.md
backend/scripts/: bootstrap_ec2.sh  deploy_on_ec2.sh  setup_github_readonly_deploy_key.sh  setup_log_retention.sh  test_openai_image_edit.py  test_vertex_gemini_image.py
backend/tests/: conftest.py  test_credit_reasons.py  test_cta_end_slide.py  test_enhance_motion.py  test_generate.py  test_image_prompts.py  test_openai_portrait.py  test_output_profile.py  test_product_slide_policy.py  test_s3_bucket_normalize.py  test_slide_image_plan.py  test_slideshow_cta_overlay.py  test_tts_gcp.py  test_vertex_imagen.py
(+89 files in other folders)
